--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,22 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 .box {
-  width: 400px;
   height: auto;
   box-shadow: 0 0 19px 3px rgba(0,0,0,.3);
   margin: 10px;
   padding: 10px;
+  width: calc(100% - 40px);
+}
+.canvas {
+  box-shadow: 0 0 19px 3px rgba(0,0,0,.3);
+  margin: 10px;
+  padding: 10px;
+  width: calc(100% - 40px);
+}
+canvas {
+  margin: 10px;
+  padding: 10px;
+  width: calc(100% - 40px);
 }
 .box img {
   width: 100%;
@@ -14,4 +25,7 @@ body {
 }
 input[type=file] {
   cursor: pointer;
+}
+p {
+  margin: 25px 10px 10px 10px;
 }
